# logit-loom

./: .gitignore  AGENTS.md  CHANGELOG.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  LICENSING.md  Makefile  README.md  SECURITY.md  rust-toolchain.toml  rustfmt.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: api_proposal.yml  bug_report.yml  config.yml
.github/workflows/: ci.yml  release-cargo.yaml  security.yml
crates/core/: Cargo.toml  README.md
crates/core/examples/: generation_plan.rs
crates/core/src/: digest.rs  error.rs  generation.rs  lib.rs  observe.rs  sampling.rs  state.rs  steering.rs  token.rs  transform.rs
crates/llamacpp/: Cargo.toml  README.md
crates/llamacpp/examples/: generate.rs
crates/llamacpp/src/: error.rs  lib.rs  model.rs  sampler.rs  session.rs  steering.rs
crates/loom/: Cargo.toml  README.md
crates/loom/examples/: observe_tokens.rs  token_bias.rs
crates/loom/src/: error.rs  first_party.rs  lib.rs  observer.rs  transform.rs
docs/: BRAND.md  architecture.md  capabilities.md  compatibility.md  getting-started.md  releasing.md
scripts/: release-check.sh
