# SPDX-License-Identifier: MIT OR Apache-2.0

[package]
name = "logit-loom-core"
description = "Backend-neutral contracts for mechanistic token-stream manipulation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/logit-loom-core"
readme = "README.md"
keywords = ["llm", "logits", "tokens", "inference", "steering"]
categories = ["algorithms", "api-bindings"]

[dependencies]
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[lints]
workspace = true
